# zotero-keeper

./: .clineignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  ROADMAP.md  SECURITY.md  precommit_stdout.txt
.clinerules/: 00-zotero-project.md  (+4 more)
docs/: faq.md  (+4 more)
mcp-server/: .env.example  README.md  check_mcp.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_client.py  test_connection.py  test_mapper_debug.py  test_mcp_tools.py
mcp-server/scripts/: test_connection.py  test_mcp_tools.py
mcp-server/src/zotero_mcp/: __init__.py  __main__.py  main.py
mcp-server/src/zotero_mcp/application/: __init__.py
mcp-server/src/zotero_mcp/application/use_cases/: __init__.py  add_reference.py  collection_operations.py  delete_reference.py  export_references.py  get_reference.py  list_references.py  search_references.py
mcp-server/src/zotero_mcp/domain/: __init__.py
mcp-server/src/zotero_mcp/domain/entities/: __init__.py  batch_result.py  collection.py  reference.py
mcp-server/src/zotero_mcp/domain/repositories/: __init__.py  collection_repository.py  reference_repository.py
mcp-server/src/zotero_mcp/infrastructure/: __init__.py  logging_config.py
mcp-server/src/zotero_mcp/infrastructure/mappers/: __init__.py  pubmed_mapper.py  zotero_schema.py
mcp-server/src/zotero_mcp/interface/: __init__.py  server.py
mcp-server/tests/: README.md  __init__.py  check_mcp.py  conftest.py  list_tools.py  test.md  test_client.py
mcp-server/tests/integration/: __init__.py
mcp-server/tests/unit/: __init__.py  test_collection_guard.py  test_logging_config.py
mcp-server/tests/unit/domain/: __init__.py  test_batch_result.py  test_collection.py  test_reference.py
mcp-server/tests/unit/infrastructure/: test_client.py  test_config.py  test_pubmed_integration.py  test_pubmed_mapper.py  test_zotero_schema.py
mcp-server/tests/unit/mcp/: __init__.py  test_attachment_tools.py  test_batch_tools.py  test_collection_support.py  test_interactive_tools.py  test_pubmed_tools.py  test_resources.py  test_saved_search_tools.py  test_search_tools.py  test_server.py  test_smart_tools.py  test_unified_import_tools.py
(+185 files in other folders)
