[project]
name = "zotero-keeper"
version = "1.10.3"
description = "MCP Server for managing local Zotero libraries - enables AI assistants to read and write bibliographic references"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Zotero Keeper Contributors" }
]
keywords = ["mcp", "zotero", "model-context-protocol", "ai", "bibliography", "reference-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/u9401066/zotero-keeper"
Documentation = "https://github.com/u9401066/zotero-keeper#readme"
Repository = "https://github.com/u9401066/zotero-keeper.git"
Issues = "https://github.com/u9401066/zotero-keeper/issues"
Changelog = "https://github.com/u9401066/zotero-keeper/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pubmed = [
    "pubmed-search-mcp>=0.1.8",  # PubMed integration
]
all = [
    "pubmed-search-mcp>=0.1.8",
    "rapidfuzz>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
zotero-keeper = "zotero_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501"]  # Allow imports after sys.path and long lines

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
